--- a/menu.css
+++ b/menu.css
@@ -98,10 +98,13 @@ body {
 
 
 .add-to-cart {
-    background-color: #303030; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ff6600; 
     color: #ffffff; 
     border: none; 
-    border-radius: 5px; 
+    border-radius: 50%; 
     padding: 10px 20px; 
     cursor: pointer; 
     font-family: 'Big Shoulders Text', cursive;
@@ -109,9 +112,13 @@ body {
     transition: background-color 0.3s ease; 
     position: absolute; 
     bottom: 20px; 
-    right: 20px; 
+    right: 35px; 
+    width: 47px;
+    height: 47px;
 }
 
 .add-to-cart:hover {
-    background-color: #000000; 
+    background-color: #c24e00; 
 }
+
+
