--- a/menu.css
+++ b/menu.css
@@ -2,11 +2,10 @@
 
 body {
     font-family: 'Big Shoulders Text', cursive;
-    background-color: #dddad8;
+    background-color: #ff9046;
     display: flex;
     justify-content: center;
     align-items: center;
-    
 }
 
 .menu {
@@ -14,20 +13,27 @@ body {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 110px;
-    max-width: 600px;
+
+    max-width: 1300px;
+
     width: 100%;
     padding-bottom: 50px;
+    display: flex;
+
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
 .menu h1 {
     text-align: center;
-    color: #333;
+    color: #242424;
     margin-bottom: 50px;
     font-family: monospace;
-    font-size: 47px;
+    font-size: 60px;
     margin-top: 10px;  
-    top: -40px; 
+    top: -10px; 
     position: relative;
+    width: 100%;
 }
 
 .menu-item {
@@ -40,9 +46,10 @@ body {
     border-radius: 10px;
     box-shadow: 0 7px 7px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s ease;
-    width: 700px;
+    margin: 15px;
+    width: 670px;
     height: 300px;
-    margin-left: -65px;
+    left: -100px;
 }
 
 .menu-item img {
@@ -85,10 +92,10 @@ body {
     text-align: justify;
     margin-right: 20px;
     left: 5px;
-    font-size: 22px;
+    font-size: 24px;
     font-weight: bold;
     position: absolute;
-    top: 119px;
+    top: 108px;
     left: 220px;
     right: 20px;
 }
@@ -113,13 +120,13 @@ body {
     padding: 10px 20px; 
     cursor: pointer; 
     font-family: 'Big Shoulders Text', cursive;
-    font-size: 16px; 
+    font-size: 19px; 
     transition: background-color 0.3s ease; 
     position: absolute; 
-    bottom: 20px; 
-    right: 35px; 
-    width: 47px;
-    height: 47px;
+    bottom: 30px; 
+    right: 50px; 
+    width: 50px;
+    height: 48px;
 }
 
 .add-to-cart:hover {
@@ -131,8 +138,8 @@ body {
     top: 93px; 
     left: 220px; 
     margin: 0;
-    color: #333;
-    font-size: 21px;
+    color: #be4c00;
+    font-size: 24px;
     font-family: 'Big Shoulders Text', cursive;
     list-style: none;
     font-weight: 800;
@@ -157,9 +164,114 @@ section {
 }
 
 .voltar a, .proxima a {
-    font-size: 25px;
+    font-size: 30px;
     color: #ff6600;
     text-decoration: none;
     font-weight: bold;
     padding: 10px 20px; 
+    align-content: space-between;
 }
+
+.menu-item .g{
+    font-family: 'Big Shoulders Text', cursive;
+    text-align: justify;
+    margin-right: 20px;
+    left: 5px;
+    font-size: 23px;
+    font-weight: bold;
+    position: absolute;
+    top: 177px;
+    left: 220px;
+    right: 20px;
+
+}
+
+
+#cart {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 300px;
+    height: 100vh;
+    background-color: #ffffff; 
+    color: #333;
+    box-shadow: -8px 0 24px rgba(0, 0, 0, 0.4);
+    transform: translateX(100%);
+    transition: transform 0.4s ease;
+    overflow-y: auto;
+    padding: 30px;
+    z-index: 2000;
+    border-radius: 15px 0 0 15px; 
+    font-family: 'Big Shoulders Text', cursive;
+    border: 1px solid #ddd;
+    background: linear-gradient(to bottom, #fff, #f7f7f7); 
+  }
+  
+  #cart.cart-visible {
+    transform: translateX(0);
+  }
+  
+  #cart .cart-header {
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    gap: 10px; 
+    border-bottom: 2px solid #FF6600;
+    padding-bottom: 10px;
+    padding-top: 10px; 
+    margin-bottom: 20px; 
+    
+  }
+  
+  #cart h2 {
+    margin: 0;
+    font-family: 'Big Shoulders Text', cursive;
+    font-size: 1.5em;
+    color: #FF6600;
+    text-shadow: 1px 1px 2px #ccc; 
+  }
+  
+  #cart .cart-header i {
+    color: #FF6600;
+    font-size: 1.5em;
+    text-shadow: 1px 1px 2px #ccc; 
+    
+  }
+  
+  #cart .cart-content {
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
+  }
+  
+  #empty-cart-message {
+    text-align: center;
+    color: #888888;
+    margin-top: 20px;
+    font-style: italic;
+    font-family: 'Big Shoulders Text', cursive;
+  }
+  
+  .icons-container a {
+    text-decoration: none;
+    color: #FF6600;
+    font-size: 1.2em; 
+    transition: color 0.3s; 
+    
+  }
+  
+  .icons-container a:hover {
+    color: #333;
+  }
+  
+  #cart .cart-header:hover {
+    background-color: #f9f9f9; 
+    transition: background-color 0.3s ease;
+  }
+  
+  #cart {
+    background: linear-gradient(to bottom, #f4f4f4 0%, #e0e0e0 100%);
+    border: 1px solid #dcdcdc;
+    padding: 10px 15px;
+  }
