--- a/menu.css
+++ b/menu.css
@@ -2,16 +2,16 @@
 
 body {
     font-family: 'Big Shoulders Text', cursive;
-    background-color: #ff9046;
+    background-color: #ebd8cb;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .menu {
-    background-color: #cacaca;
+    background-color: #ff66004f;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.368);
     padding: 110px;
 
     max-width: 1300px;
@@ -24,16 +24,18 @@ body {
     gap: 20px;
 }
 
-.menu h1 {
+h1 {
     text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.115);
     color: #242424;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     font-family: monospace;
     font-size: 60px;
-    margin-top: 10px;  
-    top: -10px; 
+    margin-top: 5px;  
+    top: -1px; 
     position: relative;
     width: 100%;
+    z-index: 2;
 }
 
 .menu-item {
@@ -44,7 +46,7 @@ body {
     margin-bottom: 35px;
     background-color: #f4f4f4;
     border-radius: 10px;
-    box-shadow: 0 7px 7px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 7px 7px rgba(0, 0, 0, 0.268);
     transition: background-color 0.3s ease;
     margin: 15px;
     width: 670px;
@@ -65,7 +67,7 @@ body {
     top: 45px;
     left: 220px;
     margin: 0;
-    color: #ff6600;
+    color: #f36100;
     font-size: 29px;
     font-family: 'Big Shoulders Text', cursive;
     z-index: 2;
@@ -120,13 +122,13 @@ body {
     padding: 10px 20px; 
     cursor: pointer; 
     font-family: 'Big Shoulders Text', cursive;
-    font-size: 19px; 
+    font-size: 21px; 
     transition: background-color 0.3s ease; 
     position: absolute; 
-    bottom: 30px; 
-    right: 50px; 
-    width: 50px;
-    height: 48px;
+    bottom: 27px; 
+    right: 52px; 
+    width: 58px;
+    height: 53px;
 }
 
 .add-to-cart:hover {
@@ -139,7 +141,7 @@ body {
     left: 220px; 
     margin: 0;
     color: #be4c00;
-    font-size: 24px;
+    font-size: 25px;
     font-family: 'Big Shoulders Text', cursive;
     list-style: none;
     font-weight: 800;
@@ -163,15 +165,6 @@ section {
     
 }
 
-.voltar a, .proxima a {
-    font-size: 30px;
-    color: #ff6600;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 10px 20px; 
-    align-content: space-between;
-}
-
 .menu-item .g{
     font-family: 'Big Shoulders Text', cursive;
     text-align: justify;
@@ -186,92 +179,12 @@ section {
 
 }
 
-
-#cart {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 300px;
-    height: 100vh;
-    background-color: #ffffff; 
-    color: #333;
-    box-shadow: -8px 0 24px rgba(0, 0, 0, 0.4);
-    transform: translateX(100%);
-    transition: transform 0.4s ease;
-    overflow-y: auto;
-    padding: 30px;
-    z-index: 2000;
-    border-radius: 15px 0 0 15px; 
-    font-family: 'Big Shoulders Text', cursive;
-    border: 1px solid #ddd;
-    background: linear-gradient(to bottom, #fff, #f7f7f7); 
-  }
-  
-  #cart.cart-visible {
-    transform: translateX(0);
-  }
-  
-  #cart .cart-header {
-    display: flex; 
-    align-items: center; 
-    justify-content: center; 
-    gap: 10px; 
-    border-bottom: 2px solid #FF6600;
-    padding-bottom: 10px;
-    padding-top: 10px; 
-    margin-bottom: 20px; 
-    
-  }
-  
-  #cart h2 {
-    margin: 0;
-    font-family: 'Big Shoulders Text', cursive;
-    font-size: 1.5em;
-    color: #FF6600;
-    text-shadow: 1px 1px 2px #ccc; 
-  }
-  
-  #cart .cart-header i {
-    color: #FF6600;
-    font-size: 1.5em;
-    text-shadow: 1px 1px 2px #ccc; 
-    
-  }
-  
-  #cart .cart-content {
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
-  }
-  
-  #empty-cart-message {
-    text-align: center;
-    color: #888888;
-    margin-top: 20px;
-    font-style: italic;
-    font-family: 'Big Shoulders Text', cursive;
-  }
-  
-  .icons-container a {
+  .sobremesa a, .bebida a, .cardapio a, .voltar a {
+    font-size: 33px;
+    color: #1e1d1d;
     text-decoration: none;
-    color: #FF6600;
-    font-size: 1.2em; 
-    transition: color 0.3s; 
-    
-  }
-  
-  .icons-container a:hover {
-    color: #333;
-  }
-  
-  #cart .cart-header:hover {
-    background-color: #f9f9f9; 
-    transition: background-color 0.3s ease;
-  }
-  
-  #cart {
-    background: linear-gradient(to bottom, #f4f4f4 0%, #e0e0e0 100%);
-    border: 1px solid #dcdcdc;
-    padding: 10px 15px;
-  }
+    font-weight: bold;
+    padding: 10px 20px;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.164);
+    margin-left: -100px; 
+}
