--- a/menu.css
+++ b/menu.css
@@ -2,38 +2,39 @@
 
 body {
     font-family: 'Big Shoulders Text', cursive;
-    background-color: #ebd8cb;
+    background-color: #f3f3f3c0;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0;
+    min-height: 100vh;
 }
 
 .menu {
-    background-color: #ff66004f;
-    border-radius: 10px;
+    background-color: #ff9b58;
+    border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.368);
-    padding: 110px;
-
-    max-width: 1300px;
-
+    padding: 5%;
+    max-width: 65%;
     width: 100%;
-    padding-bottom: 50px;
+    padding-bottom: 3%;
     display: flex;
-
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 3%;
 }
 
 h1 {
     text-align: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.115);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.415);
     color: #242424;
-    margin-bottom: 20px;
+    margin-bottom: 4%;
     font-family: monospace;
-    font-size: 60px;
-    margin-top: 5px;  
-    top: -1px; 
+    font-size: 4vw;
+    margin-top: 2%;  
+    top: 1%; 
     position: relative;
+    width: 100%;
+    z-index: 2;
     width: 100%;
     z-index: 2;
 }
@@ -41,50 +42,37 @@ h1 {
 .menu-item {
     position: relative;
     display: flex;
-    padding: 15px;
+    padding: 1%;
     align-items: center;
-    margin-bottom: 35px;
-    background-color: #f4f4f4;
-    border-radius: 10px;
-    box-shadow: 0 7px 7px rgba(0, 0, 0, 0.268);
+    background-color: #efefef;
+    border-radius: 3vh;
+    box-shadow: 0 7px 7px rgba(0, 0, 0, 0.316);
     transition: background-color 0.3s ease;
-    margin: 15px;
-    width: 670px;
-    height: 300px;
-    left: -100px;
+    margin: 1vh;
+    width: 72vh;
+    height: 30vh;
+    left: -10vh;
 }
 
 .menu-item img {
-    width: 180px;
-    height: 280px;
+    width: 27%;
+    height: 29vh;
     object-fit: cover;
-    border-radius: 10px;
-    margin-right: 20px;
+    border-radius: 2vh;
+    margin-right: 4vh;
 }
 
 .menu-item h2 {
     position: absolute;
-    top: 45px;
-    left: 220px;
+    top: 3vh;
+    left: 22vh;
     margin: 0;
     color: #f36100;
-    font-size: 29px;
+    font-size: 3.5vh;
     font-family: 'Big Shoulders Text', cursive;
     z-index: 2;
 }
-
-.menu-item .description {
-    position: absolute;
-    top: 50px;
-    left: 220px;
-    margin: 0;
-    color: #666;
-    font-size: 16px;
-    text-align: left;
-    display: none;
-    z-index: 1;
-}
-
+  
 .menu-item.active .description {
     display: block;
 }
@@ -92,26 +80,22 @@ h1 {
 .menu-item p{
     font-family: 'Big Shoulders Text', cursive;
     text-align: justify;
-    margin-right: 20px;
-    left: 5px;
-    font-size: 24px;
+    margin-right: 2vh;
+    left: 1vh;
+    font-size: 150%;
     font-weight: bold;
     position: absolute;
-    top: 108px;
-    left: 220px;
-    right: 20px;
+    top: 11vh;
+    left: 22.5vh;
+    right: 9vh;
+    color: #212121;
 }
-
-.intro-text {
-    text-align: center;
-    color: #666;
-    font-size: 18px;
-    margin-bottom: 20px; 
-}
-
-
 
 .add-to-cart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ff6600; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -119,41 +103,33 @@ h1 {
     color: #ffffff; 
     border: none; 
     border-radius: 50%; 
-    padding: 10px 20px; 
+    padding: 2vh 2vh; 
     cursor: pointer; 
     font-family: 'Big Shoulders Text', cursive;
-    font-size: 21px; 
+    font-size: 2.5vh; 
     transition: background-color 0.3s ease; 
     position: absolute; 
-    bottom: 27px; 
-    right: 52px; 
-    width: 58px;
-    height: 53px;
+    bottom: 2vh; 
+    right: 4vh; 
+    width: 6vh;
+    height: 5vh;
 }
 
 .add-to-cart:hover {
-    background-color: #c24e00; 
+    background-color: #cc5200; 
+    color: #e0e0e0;
 }
 
 .menu-item li {
     position: absolute;
-    top: 93px; 
-    left: 220px; 
+    top: 9vh; 
+    left: 22.5vh; 
     margin: 0;
-    color: #be4c00;
-    font-size: 25px;
+    color: #d95802;
+    font-size: 165%;
     font-family: 'Big Shoulders Text', cursive;
     list-style: none;
     font-weight: 800;
-}
-
-.menu a{
-    font-size: 25px;
-    color: #ff6600;
-    text-decoration: none;
-    font-weight: bold;
-    margin-left: auto;
-    padding: 10px 20px;
 }
 
 
@@ -161,30 +137,94 @@ section {
     display: flex;
     justify-content: space-between; 
     align-items: center; 
-    padding: 20px; 
+    padding: 2vh; 
     
 }
 
 .menu-item .g{
     font-family: 'Big Shoulders Text', cursive;
     text-align: justify;
-    margin-right: 20px;
-    left: 5px;
-    font-size: 23px;
+    margin-right: 2vh;
+    left: 1vh;
+    font-size: 2.3vh;
     font-weight: bold;
     position: absolute;
-    top: 177px;
-    left: 220px;
-    right: 20px;
+    top: 20vh;
+    left: 22.5vh;
+    right: 2vh;
 
 }
 
   .sobremesa a, .bebida a, .cardapio a, .voltar a {
-    font-size: 33px;
+    font-size: 3.5vh;
     color: #1e1d1d;
     text-decoration: none;
     font-weight: bold;
-    padding: 10px 20px;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.164);
-    margin-left: -100px; 
+    padding: 1vh 2vh;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.168);
+    margin-left: -10vh; 
+}
+
+.add-to-carts {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ff660000; 
+    color: #ff6600; 
+    border: none; 
+    padding: 1vh 2vh; 
+    cursor: pointer; 
+    font-family: 'Big Shoulders Text', cursive;
+    font-size: 6vh; 
+    transition: background-color 0.3s ease; 
+    position: absolute; 
+    bottom: 3vh; 
+    left: 175vh;
+    width: 30vh;
+    height: 5vh;
+    top: 5vh;
+}
+
+.add-to-carts:hover {
+    color: #cc5200; 
+}
+
+@media (max-width: 768px) {
+    .menu {
+        padding: 3%;
+    }
+
+    .menu-item {
+        width: 100%;
+        max-width: none;
+        margin: 1vh 0; /* Ajusta o espaçamento entre os itens */
+    }
+
+    h1 {
+        font-size: 5vw;
+    }
+
+    .menu-item h2 {
+        font-size: 4vw;
+    }
+
+    .menu-item p {
+        font-size: 4vw;
+    }
+
+    .add-to-cart {
+        font-size: 3vw;
+        width: 6vw;
+        height: 6vw;
+    }
+
+    .menu-item li {
+        font-size: 4vw;
+    }
+
+    .add-to-carts {
+        font-size: 5vw;
+        width: 10vw;
+        height: 10vw;
+    }
 }
